# console

./: .gitignore  CMakeLists.txt
application_build_helper/: CMakeLists.txt  Makefile  _.h  _console_application_build_helper.cbp  _factory.cpp  _main.inl  _static_factory.inl  _static_factory_exchange.inl  application.cpp  application.h  application_build_helper.cpp  application_build_helper.h  application_build_helper.vcxproj  application_build_helper.vcxproj.filters  cmake_install.cmake  deployment.rc  framework.h  generate_documentation.cpp  implement.cpp  package.cpp  package_windows.cpp  prepare_application.cpp  prepare_project.cpp  uwp_console_build_helper.vcxproj  uwp_console_build_helper.vcxproj.filters
application_build_helper/application_build_helper/: application_build_helper.cpp  application_build_helper.h  package.cpp  prepare_application.cpp  prepare_project.cpp
application_build_helper/application_build_helper.xcodeproj/: project.pbxproj
application_build_helper/application_build_helper.xcodeproj/xcshareddata/xcschemes/: application_build_helper.xcscheme  shared_application_build_helper.xcscheme
build_helper/: CMakeLists.txt  build_helper.vcxproj  build_helper.vcxproj.filters  main.cpp
build_helper/build_helper.xcodeproj/xcshareddata/xcschemes/: hello.xcscheme
build_library/: _static_factory_.inl  deployment.rc  (+4 more)
hello/: CMakeLists.txt  Makefile  _console_hello.cbp  application.cpp  application.h  cmake_install.cmake  deployment.rc  hello.vcxproj  hello.vcxproj.filters  main.cpp  remove_utf8_bom.cpp  search_special_characters.cpp  uwp_console_hello.vcxproj  uwp_console_hello.vcxproj.filters
hello/hello.xcodeproj/: project.pbxproj
hello/hello.xcodeproj/xcshareddata/xcschemes/: hello.xcscheme
hello/hello/hello/: main.cpp
hello/hello/hello.xcodeproj/: project.pbxproj
hellocalculator/: CMakeLists.txt  Package10.appxmanifest  _.h  _console_hellocalculator.cbp  _twitch.h  deployment.rc  hellocalculator.vcxproj  hellocalculator.vcxproj.filters  hellocalculator_TemporaryKey.pfx  main.cpp  twitch.cpp  uwp_console_hellocalculator.vcxproj  uwp_console_hellocalculator.vcxproj.filters
hellocalculator/hellocalculator.xcodeproj/: project.pbxproj
hellocalculator/hellocalculator.xcodeproj/xcshareddata/xcschemes/: helloearth.xcscheme
hellocalculator/programs/: 02-2022-07-11-twitch-korishama_polymorphism.cpp  03-2022-09-30-twitch-octaelliptical_star.cpp  05-2022-10-04-twitch-octaelliptical_iterative_fibonacci.cpp  06-2022-10-05-twitch-octaelliptical_count_miscellaneous_characters.cpp  07-2022-10-06-twitch-octaelliptical_list_prime_numbers.cpp  08-2022-11-14-twitch@nicopelullo-binary_tree_to_stack.cpp  09-2022-11-15-twitch@nicopelullo-inorder__preorder_and_post_order.cpp
helloearth/: 01-2022-02-11-twitch-memoriesdota_file_word_count.cpp  02-2022-07-11-twitch-korishama_polymorphism.cpp  03-2022-09-30-twitch-octaelliptical_star.cpp  06-2022-10-05-twitch-octaelliptical_count_miscellaneous_characters.cpp  09-2022-11-15-twitch@nicopelullo-inorder__preorder_and_post_order.cpp  CMakeLists.txt  Makefile  _.h  _console_helloearth.cbp  _static_factory_.inl  _twitch.h  application.cpp  application.h  cmake_install.cmake  deployment.rc  framework.h  helloearth.cbp  helloearth.vcxproj  helloearth.vcxproj.filters  helloearth_TemporaryKey.pfx  korishama.polymorphism@twitch-projects.cpp  main.cpp  memoriesdota@twitch-projects.cpp  twitch.cpp  uwp_console_helloearth.vcxproj  uwp_console_helloearth.vcxproj.filters
helloearth/helloearth.xcodeproj/: project.pbxproj
helloearth/helloearth.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
helloearth/helloearth/helloearth/: main.cpp
helloearth/helloearth/helloearth.xcodeproj/: project.pbxproj
helloearth/programs/: 02-2022-07-11-twitch-korishama_polymorphism.cpp  05-2022-10-04-twitch-octaelliptical_iterative_fibonacci.cpp  2-2022-07-11-twitch-korishama_polymorphism.cpp  4-2022-10-01-twitch-octaelliptical_star_only_odd_line_count.cpp  5-2022-10-04-twitch-octaelliptical_iterative_fibonacci.cpp  6-2022-10-05-twitch-octaelliptical_count_miscellaneous_characters.cpp  7-2022-10-06-twitch-octaelliptical_list_prime_numbers.cpp  8-2022-11-14-twitch@nicopelullo-binary_tree_to_stack.cpp  9-2022-11-15-twitch@nicopelullo-inorder__preorder_and_post_order.cpp  a-2023-02-02-twitch@ca2software.cpp
hellosolarsystem/: CMakeLists.txt  Makefile  Package10.appxmanifest  _.h  _console_hellosolarsystem.cbp  aaa_want_to_remove_helloworld.cpp  application_main.cpp  asterisk_ampersand_naked_type.cpp  brushing_bit_per_bit.cpp  cmake_install.cmake  deployment.rc  double_to_int.cpp  hellosolarsystem.cbp  hellosolarsystem.cpp  hellosolarsystem.vcxproj  hellosolarsystem.vcxproj.filters  hellosolarsystem_TemporaryKey.pfx  loop_get_char.cpp  pointer_const_pointer.cpp  printf_format_flags.cpp  promise.cpp  tutor.cpp  uwp_console_hellosolarsystem.vcxproj  uwp_console_hellosolarsystem.vcxproj.filters
hellosolarsystem/hellosolarsystem.xcodeproj/: project.pbxproj
hellosolarsystem/hellosolarsystem/hellosolarsystem/: main.cpp
hellosolarsystem/hellosolarsystem/hellosolarsystem.xcodeproj/: project.pbxproj
hellosolarsystem/hellosolarsystem1.xcodeproj/: project.pbxproj
hellosolarsystem/hellosolarsystem1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hellosolarsystem/unit_test/: _.h  _internal.h  _unit_test.h  basic_types.h  basic_types.unittest.cpp  item.cpp  item.h  pointer_const_pointer.unittest.cpp  printf_format_flags.unittest.cpp  set.cpp  set.h  tutor.unittest.cpp  unit_test.cpp  unit_test.h
readlines/: CMakeLists.txt  Makefile  Package10.appxmanifest  _.h  _console_readlines.cbp  _static_factory_.inl  application.cpp  application.h  application_main.cpp  cmake_install.cmake  deployment.rc  framework.h  helloworld.vcxproj.filters  main.cpp  readlines.cbp  readlines.vcxproj  readlines.vcxproj.filters  readlines_TemporaryKey.pfx  uwp_console_readlines.vcxproj  uwp_console_readlines.vcxproj.filters  xml.cpp
readlines/readlines.xcodeproj/: project.pbxproj
readlines/readlines.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
(+80 files in other folders)
